--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-#REACT_APP_API_URL=http://localhost:4000
-REACT_APP_API_URL=https://psf-ba.onrender.com
+REACT_APP_API_URL=http://localhost:4000
+#REACT_APP_API_URL=https://psf-ba.onrender.com
